--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"dependencies": {
 		"discord.js": "^11.4.2",
 		"exit-hook": "^2.0.0",
+		"gifsicle": "^5.1.0",
 		"node-opus": "^0.3.1",
 		"sharp": "^0.25.2",
 		"snekfetch": "^4.0.4"
